tests/ui/not-visible.stderr
error[E0624]: method `f` is private
  --> $DIR/not-visible.rs:17:5
   |
17 |     types::Struct::f();
   |     ^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0624`.
